--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-md-3 col-sm-3 col-xs-12">
                 <div class="logo">
-                    <h2><a href="#">Kulo</a></h2>
+                    <h2><a href="#">Anican</a></h2>
                 </div>
             </div>
             <div class="col-md-9 col-sm-9 col-xs-12">
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="header-text">
-                    <h1>Creative Title Goes Here</h1>
+                    <h1>ANICAN</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor <br> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis <br> nostrud exercitation</p>
                     <button>Read More</button>
                     <button>Explore</button>
